--- a/main.css
+++ b/main.css
@@ -14,3 +14,118 @@ body {
     align-items: center;
 }
 /* [ END ] Main Rules */
+
+/* [ START ] Main Section */
+main {
+    border-radius: 2rem;
+    background: #FFF;
+    box-shadow: 0px 30px 60px 0px rgba(61, 108, 236, 0.15);
+    display: flex;
+}
+main .result {
+    border-radius: 2rem;
+    background: linear-gradient(180deg, #75F 0%, #6943FF 0.01%, #2F2CE9 100%);
+    padding: 2.375rem 3.375rem 3.375rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+main .result h1 {
+    color: var(--Light-Blue, #CAC9FF);
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 2.1875rem;
+}
+main .result .circle {
+    width: 12.5rem;
+    height: 12.5rem;
+    border-radius: 50%;
+    background:  linear-gradient(180deg, #4D21C9 0%, rgba(37, 33, 201, 0.00) 100%, rgba(37, 33, 201, 0.00) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1.75rem;
+}
+main .result .circle h2 {
+    color: #FFF;
+    font-size: 4.5rem;
+    font-weight: 800;
+}
+main .result .circle span {
+    color: #CAC9FF;
+    font-size: 1.125rem;
+    font-weight: 700;
+}
+main .result h3{
+    color: #FFF;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 0.875rem;
+}
+main .result p{
+    color: #CAC9FF;
+    font-size: 1.125rem;
+    font-weight: 500;
+    max-width: 16.25rem;
+}
+main .details {
+    padding: 2.375rem 2.5rem 2.875rem;
+}
+main .details > p {
+    color: #303B59;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 1.75rem;
+}
+main .details .item {
+    width: 18rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    border-radius: 0.75rem;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.95) 100%), #F55 
+}
+main .details .item:nth-of-type(2) { background: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.95) 100%), #FFB21E }
+main .details .item:nth-of-type(3) { background: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.95) 100%), #00BB8F }
+main .details .item:last-of-type {background: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.95) 100%), #1125D6 }
+main .details .item:not(:last-of-type) { margin-bottom: 1rem }
+main .details .item .title {
+    display: flex;
+    justify-content: flex-start;
+}
+main .details .item .title p {
+    color: var(--Red, #F55);
+    font-size: 1.125rem;
+    font-weight: 500;
+    margin-left: 1.75rem;
+}
+main .details .item:nth-of-type(2) .title p { color: #FFB21E }
+main .details .item:nth-of-type(3) .title p { color: #00BB8F }
+main .details .item:last-of-type .title p { color: #1125D6 }
+main .details .item h4 {
+    color: #303B59;
+    font-size: 1.125rem;
+    font-weight: 700;
+}
+main .details .item h4 span {
+    color: #303B59;
+    opacity: 0.5;
+}
+main .details button {
+    color: #FFF;
+    margin-top: 2.5625rem;
+    padding: 1rem 6.625rem 1.0625rem;
+    font-size: 1.125rem;
+    font-weight: 700;
+    border-radius: 8rem;
+    background: #303B59;
+    border: none;
+}
+main .details button:hover {
+    background: linear-gradient(180deg, #75F 0%, #6943FF 0.01%, #2F2CE9 100%);
+    cursor: pointer;
+}
+/* [ END ] Main Section */
