--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ body {
 
 /* [ START ] Main Section */
 main {
+    max-width: 100%;
     border-radius: 2rem;
     background: #FFF;
     box-shadow: 0px 30px 60px 0px rgba(61, 108, 236, 0.15);
@@ -25,11 +26,8 @@ main {
 @media screen and (max-width:768px) {
     main {
         flex-direction: column;
-        border-radius: 0rem;
+        border-radius: 0;
     }
-}
-@media screen and (max-width:768px) {
-    main > div { width: 375px }
 }
 main .result {
     border-radius: 2rem;
@@ -48,7 +46,7 @@ main .result {
     }
 }
 main .result h1 {
-    color: var(--Light-Blue, #CAC9FF);
+    color: #CAC9FF;
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 2.1875rem;
@@ -69,7 +67,6 @@ main .result .circle {
     align-items: center;
     justify-content: center;
     margin-bottom: 1.75rem;
-    /* margin: 0 auto 28px; */
 }
 @media screen and (max-width:768px) {
     main .result .circle {
@@ -88,13 +85,14 @@ main .result .circle h2 {
         font-size: 3.5rem;
     }
 }
-main .result .circle span {
+main .result .circle h2 span {
     color: #CAC9FF;
     font-size: 1.125rem;
     font-weight: 700;
+    display: block;
 }
 @media screen and (max-width:768px) {
-    main .result .circle span {
+    main .result .circle h2 span {
         font-size: 1rem;
     }
 }
@@ -129,14 +127,14 @@ main .details {
         padding: 1.5rem 1.875rem 1.875rem;
     }
 }
-main .details > p {
+main .details h2 {
     color: #303B59;
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 1.75rem;
 }
 @media screen and (max-width:768px) {
-    main .details > p {
+    main .details h2 {
         font-size: 1.125rem;
         margin-bottom: 1.5rem;
     }
@@ -144,9 +142,11 @@ main .details > p {
 main .details .item {
     width: 18rem;
     display: flex;
+    column-gap: 0.75rem;
     justify-content: space-between;
     padding: 1rem;
     border-radius: 0.75rem;
+    border: none;
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.95) 100%), #F55 
 }
 @media screen and (max-width:768px) {
@@ -163,49 +163,49 @@ main .details .item .title {
     display: flex;
     justify-content: flex-start;
 }
-main .details .item .title p {
+main .details .item h3 {
     color: var(--Red, #F55);
     font-size: 1.125rem;
     font-weight: 500;
-    margin-left: 1.75rem;
+    flex-grow: 1;
 }
 @media screen and (max-width:768px) {
-    main .details .item .title p {
+    main .details .item h3 {
         font-size: 1rem;
-        margin-left: 0.75rem;
     }
 }
-main .details .item:nth-of-type(2) .title p { color: #FFB21E }
-main .details .item:nth-of-type(3) .title p { color: #00BB8F }
-main .details .item:last-of-type .title p { color: #1125D6 }
-main .details .item h4 {
+main .details .item:nth-of-type(2) h3 { color: #FFB21E }
+main .details .item:nth-of-type(3) h3 { color: #00BB8F }
+main .details .item:last-of-type h3 { color: #1125D6 }
+main .details .item p {
     color: #303B59;
     font-size: 1.125rem;
     font-weight: 700;
 }
 @media screen and (max-width:768px) {
-    main .details .item h4 {
+    main .details .item p {
         font-size: 1rem;
     }
 }
-main .details .item h4 span {
+main .details .item p span {
     color: #303B59;
     opacity: 0.5;
 }
 main .details button {
+    width: 100%;
     color: #FFF;
     margin-top: 2.5625rem;
-    padding: 1rem 6.625rem 1.0625rem;
+    padding: 1rem;
     font-size: 1.125rem;
     font-weight: 700;
     border-radius: 8rem;
     background: #303B59;
     border: none;
+    display: block;
 }
 @media screen and (max-width:768px) {
     main .details button {
         margin-top: 1.5rem;
-        padding: 1.0625rem 7.5rem;
     }
 }
 main .details button:hover {
